# awscrt

./: .gitignore  Gemfile  LICENSE.txt  README.md  Rakefile  awscrt.gemspec  benchmark.rb
.github/workflows/: main.yml
crt/: CMakeLists.txt
ext/awscrt/: awscrt.c  awscrt.h  extconf.rb
lib/: awscrt.rb
lib/awscrt/: version.rb
sig/: awscrt.rbs
spec/: awscrt_spec.rb  spec_helper.rb
